fisrt submit(home, events, animation)

--- a/animations.html
+++ b/animations.html
@@ -76,7 +76,7 @@
               <div id="animate1">
               <blockquote>.animate() - Perform a custom animation of a set of CSS properties.</blockquote>
                 <div class="alert alert-info" role="alert"><strong>Task:</strong> Upon <em>mouseover</em> increase the size of the mouse to 70% using an animation.</div>
-                <img src="images/mouse.png" class="img-responsive" style="width: 20%;"> 
+                <img src="images/mouse.png" class="img-responsive" style="width: 20%;">
               </div>
               <hr>
             </div>
@@ -84,7 +84,7 @@
               <div id="animate2">
               <blockquote>.animate() - Perform a custom animation of a set of CSS properties.</blockquote>
               <div class="alert alert-info" role="alert"><strong>Task:</strong> Upon <em>dblclick</em> move the mouse to the right-hand side of it's container. Upon a subsquent <em>dblclick</em> have it move back to its original position.</div>
-                <img src="images/mouse.png" class="img-responsive" style="width: 20%;"> 
+                <img src="images/mouse.png" class="img-responsive" style="width: 20%;">
               </div>
               <hr>
             </div>
@@ -92,7 +92,7 @@
               <div id="animate3">
               <blockquote>.animate() - Perform a custom animation of a set of CSS properties.</blockquote>
                 <div class="alert alert-info" role="alert"><strong>Task:</strong> Upon <em>click</em> fade the mouse out and have a cat fade back in :)</div>
-                <img src="images/mouse.png" class="img-responsive" style="width: 20%;"> 
+                <img src="images/mouse.png" class="img-responsive" style="width: 20%;">
               </div>
               <hr>
             </div>
@@ -106,8 +106,10 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
+    <script>window.jQuery || document.write('<script src="js/jquery-2.2.1.min.js"><\/script>')</script>
+
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
