--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
           </div>
         </div>
-      </div>      
+      </div>
 
       <div class="row">
         <div class="col-md-12">
@@ -141,7 +141,7 @@
             </div>
           </div>
         </div>
-      </div>      
+      </div>
 
       <div class="row">
         <div class="col-md-12">
@@ -167,7 +167,7 @@
             </div>
           </div>
         </div>
-      </div>   
+      </div>
 
       <div class="row">
         <div class="col-md-12">
@@ -200,9 +200,9 @@
             </div>
           </div>
         </div>
-      </div>   
+      </div>
 
-              
+
 
     </div> <!-- /container -->
 
@@ -210,8 +210,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
+<!--     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
+    <script>window.jQuery || document.write('<script src="js/jquery-2.2.1.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
