--- a/events.html
+++ b/events.html
@@ -76,7 +76,7 @@
               <div id="mouse">
                 <blockquote>mousemove & mouseover - User has moved the mouse over the element (although explore the difference)</blockquote>
                 <div class="alert alert-info" role="alert"><strong>Task:</strong> Upon <em>mouseover</em> increase the size of the mouse to 50%.</div>
-                <img src="images/mouse.png" class="img-responsive" style="width: 20%;"> 
+                <img src="images/mouse.png" class="img-responsive" style="width: 20%;">
               </div>
               <hr>
             </div>
@@ -128,7 +128,7 @@
             </div>
           </div>
         </div>
-      </div>              
+      </div>
 
     </div> <!-- /container -->
 
@@ -136,8 +136,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
+    <script>window.jQuery || document.write('<script src="js/jquery-2.2.1.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
